MOS-20263 : Setting the classpath for the client jar
Former-commit-id: 198bf5166d03caec8e579bf962bbdeb338318e55
Former-commit-id: 97e8a4a9d832fb6b1fbd2ed2ea3c8f5a9ce223be